-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: core-svc
-
b21
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8278464 | 11.0.15-oracle | Poonam Bajaj Parhar | P4 | Resolved | Fixed | b01 |
| JDK-8278839 | 11.0.15 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8287240 | openjdk8u342 | Zhengyu Gu | P4 | Resolved | Fixed | b04 |
| JDK-8354734 | shenandoah8u342 | Zhengyu Gu | P4 | Resolved | Fixed | b04 |
| JDK-8278572 | 8u331 | Poonam Bajaj Parhar | P4 | Resolved | Fixed | b01 |
936 } else {
937 char* resolved;
938
939 if (!haveBasePath) {
940 if (JDK_Canonicalize((char*)jarfile, canonicalPath, sizeof(canonicalPath)) != 0) {
941 fprintf(stderr, "WARNING: unable to canonicalize %s\n", jarfile);
942 free(path);
943 continue;
944 }
945 parent = basePath(canonicalPath);
946 jplis_assert(parent != (char*)NULL);
947 haveBasePath = 1;
948 }
949
950 resolved = resolve(parent, path); // malloc resolved here
951 jvmtierr = (*jvmtienv)->AddToBootstrapClassLoaderSearch(jvmtienv, resolved); // use resolved here
952 }
Here, we malloc() resolved in line 950 without free(). It is a memory leak, so let's fix it.
- backported by
-
JDK-8278464 Memory leak in appendBootClassPath()
-
- Resolved
-
-
JDK-8278572 Memory leak in appendBootClassPath()
-
- Resolved
-
-
JDK-8278839 Memory leak in appendBootClassPath()
-
- Resolved
-
-
JDK-8287240 Memory leak in appendBootClassPath()
-
- Resolved
-
-
JDK-8354734 Memory leak in appendBootClassPath()
-
- Resolved
-
- relates to
-
JDK-8273575 memory leak in appendBootClassPath(), paths must be deallocated
-
- Resolved
-
- links to
-
Commit
openjdk/jdk8u-dev/d35dea79
-
Commit
openjdk/jdk11u-dev/ba1a0e87
-
Commit
openjdk/jdk/aa90df6f
-
Review
openjdk/jdk8u-dev/42
-
Review
openjdk/jdk11u-dev/713
-
Review
openjdk/jdk/3751