8266187: Memory leak in appendBootClassPath()